# handwritten-digits-recognition

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  checkpoints.dvc  deploy_tensorrt.sh  docker-compose.yaml  dvc.yaml  entrypoint.sh  infer.py  model.onnx.data  pyproject.toml  run.sh  train.py  train_main.py
.dvc/: config
configs/: train.yaml  training.yaml
digit_recognition/: __init__.py  commands.py  data_module.py  download_data.py  inference.py  model.py  plots_callback.py  preprocessing.py
mlruns/0/: meta.yaml
mlruns/250982076187994023/: meta.yaml
mlruns/250982076187994023/49c17469a8264fba9235b130c9d404a6/: meta.yaml
mlruns/250982076187994023/49c17469a8264fba9235b130c9d404a6/metrics/: epoch  test_accuracy  test_loss  train_loss_epoch  train_loss_step  val_accuracy  val_loss  val_precision  val_recall
mlruns/250982076187994023/49c17469a8264fba9235b130c9d404a6/params/: name
mlruns/250982076187994023/49c17469a8264fba9235b130c9d404a6/tags/: mlflow.runName  mlflow.source.git.commit
models/digit_recognition/: config.pbtxt
scripts/: convert.py  main.py
tests/: test_inference.py
