[tool.poetry]
name = "digit-recognition"
version = "0.1.0"
description = "Handwritten digit recognition (MNIST) with deep learning and MLOps best practices"
authors = ["Tikhon Andreevich Listov"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.0.0"
torchvision = ">=0.15.0,<0.28.0"
torchaudio = "^2.0.0"
torchmetrics = "^0.11.0"
torchinfo = "^1.7.0"
pytorch-lightning = "^2.0.0"
hydra-core = "^1.3.0"
dvc = "^3.0.0"
mlflow = "^2.0.0"
wandb = ">=0.15.0"
ruff = ">=0.1.0,<1.0.0"
gitpython = "^3.1.0"
onnx = "^1.14.0"
onnxruntime = "^1.15.0"
onnxsim = ">=0.4.0"
pillow = "^10.0.0"
requests = "^2.31.0"
fire = "^0.7.0"
opencv-python-headless = "^4.10.0"
pyTelegramBotAPI = "^4.18.0"
scikit-learn = "^1.4.0"

[tool.poetry.scripts]
digit-recognition = "digit_recognition.commands:cli"
train = "digit_recognition.commands:train"
onnx = "digit_recognition.commands:onnx"
infer = "infer:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["*.sh"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["digit_recognition"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
